tests/integration/traits/errors/too-many-type-variables/main.cx
trait N {
  e(self): Number
}

impl N Number<a> {
  e(m) {
    return 0
  }
}
